ajout champ unité sur la table recette_produit refactoring

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -105,6 +105,8 @@ h2 {
 	height: 100% !important;
 }
 .modal-dialog {
-	top: -400px;
-	width: 720px;
+    position: absolute;
+	left: 25%;
+    top: 120px;
+    width: 720px;
 }
