--- a/public/css/global.css
+++ b/public/css/global.css
@@ -106,7 +106,34 @@ h2 {
 }
 .modal-dialog {
     position: absolute;
-	left: 25%;
-    top: 120px;
-    width: 720px;
+	top: 0;
+	left: 0;
+    width: 100%;
+	height: 100%;
+	overflow-y: auto;
+	margin: 0;
+}
+
+@media (min-width: 600px) {
+	.modal-dialog {
+		left: 10%;
+		width: 80%;
+	}
+}
+
+@media (min-width: 768px) {
+	.modal-dialog {
+		top: 5%;
+		max-height: 600px;
+	}
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+	.modal-dialog {
+		max-height: 800px;
+	}
 }
