--- a/public/css/tablette.css
+++ b/public/css/tablette.css
@@ -1,11 +1,39 @@
 body {
 	background: url(../img/screen.jpg);
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+	/*color: #fff;*/
+}
+
+.h1, .h2, .h3, h1, h2, h3, .control-label, legend
+{
+	color: #fff;
 }
 
 #page {
 	padding: 30px;
 }
 
+.table {
+	background-color: #fff;
+}
+
+.table th.actions,
+.table td.actions {
+	width: 30%;
+}
+
+.full_size_link {
+	color: #333;
+	text-decoration: none;
+}
+
+.full_size_link > div {
+	width: 100%;
+	height: 100%;
+}
+
+/* header */
 .header, .footer {
     box-sizing: border-box;
     color: #fff;
@@ -14,10 +42,27 @@ body {
     line-height: 40px;
     padding: 0 10px;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .header a {
     color: #fff;
+}
+
+#headingLinks > a {
+    position: relative;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	border: solid 2px #fff;
+	border-radius: 15px;
+	margin-right: 5px;
+}
+
+#headingLinks > a > span {
+	position: absolute;
+	top: 7px;
+	left: 7px;
 }
 
 
@@ -50,4 +95,15 @@ body {
 
 .home_link {
 
+}
+
+/* produits */
+.categorie_produits td.nom {
+	width: 50%;
+}
+.categorie_produits td.stock {
+	width: 20%;
+}
+.categorie_produits td.actions {
+	width: 30%;
 }
