--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -1,4 +1,12 @@
-html, {
+
+@import "navbar";
+
+
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
+html {
 	height: 100%;
 	body {
 		height: 100%;
@@ -8,21 +16,25 @@ html, {
 		color: #333131;
 		font-weight: normal;
 		font-family: 'Lato', sans-serif;
-	}
-}
+		&.nav-md {
+			.container-fluid {
+				padding: 0;
+				.col-md-3 {
+					&.left_col {
+						background: #2a3f54 none repeat scroll 0 0;
+						padding: 0;
+						height: 100%;
+						position: absolute;
+					}
+				}
+				.col-md-9 {
+					&.right_col {
+						padding: 0;
+						margin-left: 25%;
+					}
+				}
+			}
 
-.container {
-	height: 100%;
-	text-align: center;
-}
-
-.content {
-	height: 100%;
-}
-
-nav {
-	width: 100%;
-	ul {
-
+		}
 	}
 }
