build npm casse-noix...

--- a/resources/assets/scripts/components/ui/menubar/menubar.template.html
+++ b/resources/assets/scripts/components/ui/menubar/menubar.template.html
@@ -12,10 +12,14 @@
 	<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
 		<ul class="nav side-menu">
-			<li><a [routerLink]="['/']">Accueil</a></li>
+			<li>
+				<a [routerLink]="['/']">
+					<span class="fa fa-fw fa-home"></span> Accueil
+				</a>
+			</li>
 			<li>
 				<a href="/liste-courses">
-					<i class="fa fa-fw fa-shopping-cart"></i> Liste de courses
+					<span class="fa fa-fw fa-shopping-cart"></span> Liste de courses
 				</a>
 			</li>
 			<li menulink>
