--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -1,5 +1,11 @@
 
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome.scss";
+
 @import "navbar";
+
+
+
 
 
 *, *::after, *::before {
