--- a/resources/assets/scripts/components/ui/menubar/menubar.template.html
+++ b/resources/assets/scripts/components/ui/menubar/menubar.template.html
@@ -30,7 +30,7 @@
 				</a>
 				<ul class="nav child_menu">
 					<li><a [routerLink]="['/categories']">Catégories</a></li>
-					<li><a href="/produits">Produits</a></li>
+					<li><a [routerLink]="['/products']">Produits</a></li>
 					<li><a href="/consomation">Consomation</a></li>
 				</ul>
 			</li>
