--- a/resources/assets/scripts/components/app/products/products.template.html
+++ b/resources/assets/scripts/components/app/products/products.template.html
@@ -1,20 +1,28 @@
 <div class="clearfix">
 
 	<h1>{{title}}</h1>
-	<ul id="sortable" class="categories">
-		<li *ngFor="let product of products" class="ui-state-default clearfix">
-			<div class="col-sm-1">
-				<span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
-			</div>
-			<div class="col-sm-7">
-				{{ product.id }} - {{ product.nom }}
-			</div>
-			<div class="col-sm-4">
-				<a href="/categories/edit/{{ category.id }}" class="btn btn-sm btn-info">
-					<span class="glyphicon glyphicon-edit"></span> Editer
-				</a>
-			</div>
-		</li>
-	</ul>
+
+	<table class="table table-bordered table-hover">
+		<thead>
+			<tr>
+				<th>Nom</th>
+				<th>Catégorie</th>
+				<th>Etat du stock</th>
+				<th class="actions">Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let product of products">
+				<td>{{ product.nom }}</td>
+				<td>Catégorie</td>
+				<td>{{ product.quantite }}</td>
+				<td>
+					<a href="/categories/edit/{{ product.id }}" class="btn btn-sm btn-info">
+						<span class="glyphicon glyphicon-edit"></span> Editer
+					</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
 </div>
