avancement base de l'interface

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import 'helpers/helpers';
 @import 'layout/layout';
 @import 'components/components';
+@import 'plugins/plugins';
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
