--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,3 +6,12 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+.slide-title {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+.slide-content {
+    text-align: justify;
+}
