--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,6 +3,7 @@
 @import 'layout/layout';
 @import 'components/components';
 @import 'plugins/plugins';
+@import 'animations/animations';
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
