--- a/resources/sass/layout/_base.scss
+++ b/resources/sass/layout/_base.scss
@@ -44,6 +44,12 @@ h2 {
     font-weight: var(--font-weight-black);
 }
 
+.nav {
+    li {
+        width: 100%;
+    }
+}
+
 li {
     padding: .35vh 0;
     border-bottom: solid 2px rgba(255, 255, 255, .2);
